--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -1045,6 +1045,11 @@ src/Osako/kartPad.cpp:
     #.bss: [0x803be230, 0x803bfe38] # common bss area
     .sdata2: [0x803d9a38, 0x803d9a50]    
 
+src/Osako/FontMgr.cpp:
+    .text: [0x801d21a8, 0x801d2240]
+    .rodata: [0x80340ca0, 0x80340cb8]
+    .sbss: [0x803d5c00, 0x803d5c08]
+
 src/Osako/systemData.cpp:
     .text: [0x801d6520, 0x801d66a8]
     .ctors: [0x802d8798, 0x802d879c]
