--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -1163,6 +1163,12 @@ src/Osako/ResetAgent.cpp:
     .bss: [0x803ed238, 0x803ed268]
     .sbss: [0x80416a78, 0x80416a88]
 
+src/Osako/MenuBackground.cpp:
+    .text: [0x8021906c, 0x80219158]
+    .rodata: [0x8037ebd8, 0x8037ebf8]
+    .sbss: [0x80416a88, 0x80416a90]
+    .sdata2: [0x8041bb10, 0x8041bb18]
+
 src/Osako/GIRecord.cpp:
     .text: [0x802194d4, 0x802195f0]
 
