--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -6,6 +6,12 @@ src/kartLocale.cpp:
     .sbss: [0x804156e0, 0x804156f0]
     .sdata2: [0x804171c0, 0x804171e8]
 
+#libs/JSystem/JParticle/JPAFieldBlock.cpp:
+    #.text: [0x8000e450, 0x80010760]
+    #.rodata: [0x80360c58, 0x80360ca0]
+    #.data: [0x80387d88, 0x80387e78]
+    #.sdata2: [0x804172f0, 0x80417318]
+
 libs/JSystem/JParticle/JPAKeyBlock.cpp:
     .text: [0x80010760, 0x80010804]
     .sdata2: [0x80417318, 0x80417320]
@@ -949,6 +955,16 @@ src/Kaneshige/DrawBuffer.cpp:
     .data: [0x80395a60, 0x80395a78]
     .bss: [0x803ca6f8, 0x803ca708]
     #.bss: [0x803fbf84, 0x803fbfa8]
+
+#src/Kaneshige/Course/Course.cpp:
+    #.text: [0x80198cd4, 0x8019ef84]
+    #.ctors: [0x80316264, 0x80316268]
+    #.rodata: [0x803768d0, 0x80376d40]
+    #.data: [0x80395a78, 0x80395b88]
+    #.bss: [0x803ca708, 0x803ca738]
+    #.sdata: [0x804145e0, 0x80414610]
+    #.sbss: [0x80416390, 0x80416398]
+    #.sdata2: [0x80419bd8, 0x80419c68]
 
 src/Kaneshige/HioMgr.cpp:
     .text: [0x801a6960, 0x801a6c30]
